@startuml
class Solution45 {
    'attribute
    -list: List<String>

    +main(String[])
        'prompt for the output file
        'call the ReadFile object
        'store the scanned lines into the list

        'call the Output object
        'prints out the output into a file
        'display the output that was written into the file
}

class Output {
    'call the Output object

    'attribute
    -list: list<String>

    'constructor
    -Output(String name, List<String> list)

    +writer(String toReplace, String replacement)
        'StringBuilder object
        '(for-loop) iterates through the list
            'replace the words
            'store the output into a string builder
            'prints out the output into a file

        'close the Output method
        'return the string builder
}

class ReadFile{
    'call the scanner object

    'constructor
    +ReadFile(String pathname)

    +read(List<String> list)
    'try scanning the lines
        'store the scanned lines into the list
    'catch all the exception and prints it
    'close the scanner

    'return the array list
}

Solution45 *-- ReadFile
Solution45 *-- Output
@enduml